# scOPE

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
Jupyter_notebooks/: code_test_notebook.ipynb  integrating_scRNA_and_bulk_RNA_AML_data.ipynb  model_eval_test_notebook.ipynb
Jupyter_notebooks/.ipynb_checkpoints/: code_test_notebook-checkpoint.ipynb  model_eval_test_notebook-checkpoint.ipynb
conda-recipe/: meta.yaml
environments/: scOPE_working_environment.yml  scOPE_working_environment_v2.yml
notebooks/: 01_end_to_end_example.ipynb  02_CRC_TCGA_COAD_READ.ipynb  03_BRCA_TCGA.ipynb  04_SKCM_TCGA.ipynb  classification_model_training_using_vanGalen_scRNA-seq_data.ipynb  code_test_notebook_2-Copy1.ipynb  integrating_scRNA_AML_patient_data.ipynb  integrating_scRNA_and_bulk_RNA_AML_data.ipynb  model_eval_test_notebook_2.ipynb  preprocess_scRNA_and_bulk_RNA_AML_data_using_vanGalen_AnnData.ipynb  trained_model_exploration.ipynb
notebooks/figures/svd_eval_BRAF/: gene_program_table.csv
notebooks/figures/svd_eval_MAP2K1/: gene_program_table.csv
notebooks/figures/svd_eval_MAP2K2/: gene_program_table.csv
notebooks/figures/svd_eval_NF1/: gene_program_table.csv
notebooks/figures/svd_eval_NRAS/: gene_program_table.csv
scOPE/: evaluate.py  models.py  utilities.py
scope/classification/: base.py  models.py
scope/decomposition/: __init__.py  base.py  cnmf.py  factor_analysis.py  nmf.py  pca.py  svd.py
scope/evaluation/: __init__.py  metrics.py  svd_evaluation.py
scope/io/: loaders.py
scope/pipeline/: bulk_pipeline.py  sc_pipeline.py
scope/preprocessing/: alignment.py  bulk.py  single_cell.py
scope/utils/: validation.py
scope/visualization/: embeddings.py
tests/: conftest.py  test_evaluation.py  test_pipeline.py  test_utils.py
