[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scope-bio"
version = "0.1.2"
description = "scOPE: single-cell Oncological Prediction Explorer — transfer-learning from bulk RNA-seq to predict per-cell mutation probabilities in scRNA-seq."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Andrew J. Ashford"},
]
keywords = [
    "single-cell", "RNA-seq", "cancer", "mutation", "transfer-learning",
    "SVD", "NMF", "bioinformatics", "genomics"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=1.5",
    "scikit-learn>=1.3",
    "anndata>=0.9",
    "scanpy>=1.9",
    "matplotlib>=3.6",
    "seaborn>=0.12",
    "joblib>=1.2",
]

[project.optional-dependencies]
full = [
    "xgboost>=1.7",
    "lightgbm>=4.0",
    "umap-learn>=0.5",
    "shap>=0.42",
]
dev = [
    "pytest>=7",
    "pytest-cov",
    "black",
    "isort",
    "mypy",
    "ruff",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
]

[project.urls]
Homepage = "https://github.com/Ashford-A/scOPE"
"Bug Tracker" = "https://github.com/Ashford-A/scOPE/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["scope*"]

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short --color=yes"
filterwarnings = [
    "error::FutureWarning",
    "ignore::UserWarning",
    "ignore::DeprecationWarning:anndata",
    "ignore::DeprecationWarning:scanpy",
]

[tool.coverage.run]
source = ["scope"]
omit = ["tests/*", "scope/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 40

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = [
    "E501",
    "N803",
    "N806",
    "N802",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]   # allow assert statements in tests

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_return_any = false
warn_unused_configs = true
